验证conv层构建功能

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,8 @@ aux_source_directory(../test DIR_TEST)
 aux_source_directory(../source/data DIR_DATA)
 aux_source_directory(../source/layer DIR_LAYER)
 aux_source_directory(../source/parser DIR_PARSER)
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
 
 set(link_lib glog pthread gflags gtest)
 set(link_math_lib armadillo blas lapack)
