修改 conv层实现

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -10,9 +10,10 @@ aux_source_directory(../source/layer/abstract DIR_ABSTRACT_LAYER)
 aux_source_directory(../source/layer/binocular DIR_BINOCULAR_LAYER)
 aux_source_directory(../source/layer/monocular DIR_MONOCULAR_LAYER)
 
-set(CMAKE_BUILD_TYPE Release)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
 find_package(OpenMP REQUIRED)
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fopenmp")
+
 
 set(link_lib glog pthread gflags gtest)
 set(link_math_lib armadillo blas lapack)
