--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.23)
-project(kuiper_course)
+project(kuiper_infer)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(./include)
 ### gtest
