--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ aux_source_directory(../source/parser DIR_PARSER)
 aux_source_directory(../source/layer/abstract DIR_ABSTRACT_LAYER)
 aux_source_directory(../source/layer/binocular DIR_BINOCULAR_LAYER)
 aux_source_directory(../source/layer/monocular DIR_MONOCULAR_LAYER)
+aux_source_directory(../source/shape DIR_SHAPE)
 
 #set(CMAKE_BUILD_TYPE Release)
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fopenmp")
@@ -15,5 +16,5 @@ find_package(OpenMP REQUIRED)
 
 set(link_lib glog pthread gflags gtest)
 set(link_math_lib armadillo blas lapack)
-add_executable(test_kuiper ${DIR_TEST} ${DIR_DATA} ${DIR_BINOCULAR_LAYER} ${DIR_MONOCULAR_LAYER} ${DIR_PARSER} ${DIR_ABSTRACT_LAYER})
+add_executable(test_kuiper ${DIR_TEST} ${DIR_DATA} ${DIR_BINOCULAR_LAYER} ${DIR_MONOCULAR_LAYER} ${DIR_PARSER} ${DIR_ABSTRACT_LAYER} ${DIR_SHAPE})
 target_link_libraries(test_kuiper ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX)
