--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -4,7 +4,9 @@ find_package(GTest REQUIRED)
 
 aux_source_directory(../bench DIR_BENCH)
 aux_source_directory(../source/data DIR_DATA)
-aux_source_directory(../source/runtime DIR_PARSER)
+aux_source_directory(../source/runtime DIR_RUNTIME)
+aux_source_directory(../source/parser DIR_PARSER)
+
 aux_source_directory(../source/layer/abstract DIR_ABSTRACT_LAYER)
 aux_source_directory(../source/layer/details DIR_BINOCULAR_LAYER)
 aux_source_directory(../source/layer/monocular DIR_MONOCULAR_LAYER)
@@ -16,7 +18,7 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fopenmp")
 
 set(link_lib glog pthread gflags gtest)
 set(link_math_lib armadillo blas lapack)
-add_executable(bench_kuiper ${DIR_BENCH} ${DIR_DATA} ${DIR_BINOCULAR_LAYER} ${DIR_MONOCULAR_LAYER} ${DIR_PARSER} ${DIR_ABSTRACT_LAYER})
+add_executable(bench_kuiper ${DIR_BENCH} ${DIR_DATA} ${DIR_BINOCULAR_LAYER} ${DIR_RUNTIME} ${DIR_MONOCULAR_LAYER} ${DIR_PARSER} ${DIR_ABSTRACT_LAYER})
 target_link_libraries(bench_kuiper ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX benchmark::benchmark benchmark::benchmark_main)
 target_include_directories(bench_kuiper PUBLIC ./include/math)
 target_include_directories(bench_kuiper PUBLIC ${GTEST_INCLUDE_DIRS})
