完善对resnet18的支持

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,8 +10,7 @@ aux_source_directory(../source/layer/monocular DIR_MONOCULAR_LAYER)
 aux_source_directory(../source/shape DIR_SHAPE)
 aux_source_directory(../source/parser DIR_PARSER)
 
-set(CMAKE_BUILD_TYPE Release)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fopenmp")
+#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fopenmp")
 find_package(OpenMP REQUIRED)
 
 set(link_lib glog pthread gflags gtest)
