--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,8 @@ aux_source_directory(../source/layer/monocular DIR_MONOCULAR_LAYER)
 aux_source_directory(../source/shape DIR_SHAPE)
 aux_source_directory(../source/parser DIR_PARSER)
 
-#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fopenmp")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fopenmp -march=native")
+
 find_package(OpenMP REQUIRED)
 
 set(link_lib glog pthread gflags gtest)
