--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,8 @@
 find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS})
+find_package(OpenMP REQUIRED)
+find_package(glog REQUIRED)
+find_package(Armadillo REQUIRED)
+
 
 aux_source_directory(../test DIR_TEST)
 aux_source_directory(../source/data DIR_DATA)
@@ -10,12 +13,15 @@ aux_source_directory(../source/layer/monocular DIR_MONOCULAR_LAYER)
 aux_source_directory(../source/shape DIR_SHAPE)
 aux_source_directory(../source/parser DIR_PARSER)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fopenmp -march=native")
+set(link_lib glog::glog pthread GTest::gtest)
+set(link_math_lib ${ARMADILLO_LIBRARIES} blas lapack)
 
-find_package(OpenMP REQUIRED)
+include_directories(${glog_INCLUDE_DIR})
+include_directories(${GTest_INCLUDE_DIR})
 
-set(link_lib glog pthread gflags gtest)
-set(link_math_lib armadillo blas lapack)
 add_executable(test_kuiper ${DIR_TEST} ${DIR_DATA} ${DIR_PARSER} ${DIR_BINOCULAR_LAYER} ${DIR_MONOCULAR_LAYER} ${DIR_PARSER} ${DIR_ABSTRACT_LAYER} ${DIR_SHAPE})
-target_link_libraries(test_kuiper ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX)
-target_include_directories(test_kuiper PUBLIC ./include/math)
+
+target_link_libraries(test_kuiper ${link_lib} ${link_math_lib})
+target_link_libraries(test_kuiper OpenMP::OpenMP_CXX)
+
+
