--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "KuiperTmp"]
-	path = KuiperTmp
-	url = https://github.com/zjhellofss/KuiperTmp.git
+[submodule "tmp"]
+	path = tmp
+	url = https://github.com/zjhellofss/tmp.git
