--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -17,3 +17,8 @@ set(link_math_lib ${ARMADILLO_LIBRARIES} blas lapack)
 
 add_executable(bench_kuiper ${DIR_BENCH} ${DIR_DATA} ${DIR_BINOCULAR_LAYER} ${DIR_RUNTIME} ${DIR_MONOCULAR_LAYER} ${DIR_PARSER} ${DIR_ABSTRACT_LAYER})
 target_link_libraries(bench_kuiper ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX)
+
+target_include_directories(bench_kuiper PUBLIC ${benchmark_INCLUDE_DIRS})
+target_include_directories(bench_kuiper PUBLIC ${glog_INCLUDE_DIR})
+target_include_directories(bench_kuiper PUBLIC ${GTest_INCLUDE_DIR})
+target_include_directories(bench_kuiper PUBLIC ${Armadillo_INCLUDE_DIR})
