--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,17 @@ project(kuiper_infer)
 set(CMAKE_CXX_STANDARD 17)
 include_directories(./include)
 
-set(BUILD_DEMO ON)
+set(USE_CUDA "Support Cuda Backend" ON)
+set(BUILD_DEMO "Build The Demo Project" ON)
+
 if (BUILD_DEMO)
     MESSAGE(STATUS "Build Demo Project")
     add_subdirectory(demos)
+endif ()
+
+if (USE_CUDA)
+    MESSAGE(STATUS "Support Cuda Backend")
+    add_definitions(-DUSE_CUDA)
 endif ()
 
 enable_testing()
