--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -31,7 +31,10 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
+    - name : Show
+      run: ls
+
     - name: Test
       working-directory: ${{github.workspace}}
-      run: ./build/test/test_kuiper
+      run: cd ..&&./build/test/test_kuiper
 
