增加子模块workflow

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,5 +29,5 @@ jobs:
 
     - name: Test
       working-directory: ${{github.workspace}}
-      run:  /home/runner/work/KuiperInfer/KuiperInfer/build/test/test_kuiper
+      run:  ${{github.workspace}}/build/test/test_kuiper
 
