--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,19 +27,17 @@ jobs:
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
 
       - uses: actions/checkout@v3
         with:
           submodules: 'true'
+      - run: echo "🍏 This job's status is ${{ job.status }}."
 
       - name: Configure CMake
-        run: echo ${{github.workspace}} && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+        run: ls ${{github.workspace}} && cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
       - name: Build
         run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -- -j 3
-
 
       - name: Test
         working-directory: ${{github.workspace}}
