修改test目录的结构

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,10 @@ find_package(Armadillo REQUIRED)
 find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
 
-aux_source_directory(../test DIR_TEST)
+aux_source_directory(../test/test_data DIR_TEST_DATA)
+aux_source_directory(../test/test_layer DIR_TEST_LAYER)
+aux_source_directory(../test/test_net DIR_TEST_NET)
+aux_source_directory(../test/test_runtime DIR_TEST_RUNTIME)
 
 set(link_lib glog::glog GTest::gtest)
 if(!WIN32)
@@ -13,7 +16,7 @@ if(!WIN32)
 endif()
 set(link_math_lib ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
 
-add_executable(test_kuiper ${DIR_TEST})
+add_executable(test_kuiper ${DIR_TEST_DATA} ${DIR_TEST_LAYER} ${DIR_TEST_NET} ${DIR_TEST_RUNTIME})
 if(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O0 /openmp:llvm")
 else()
