修改test目录的结构

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,9 +14,9 @@ set(link_lib glog::glog GTest::gtest)
 if(!WIN32)
     set(link_lib "${link_lib} pthread")
 endif()
-set(link_math_lib ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
+set(link_math_lib  ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
 
-add_executable(test_kuiper ${DIR_TEST_DATA} ${DIR_TEST_LAYER} ${DIR_TEST_NET} ${DIR_TEST_RUNTIME})
+add_executable(test_kuiper ../test/test_main.cpp ${DIR_TEST_DATA} ${DIR_TEST_LAYER} ${DIR_TEST_NET} ${DIR_TEST_RUNTIME})
 if(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O0 /openmp:llvm")
 else()
