增加条件判断

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 find_package(GTest REQUIRED)
-find_package(OpenMP REQUIRED)
+#find_package(OpenMP REQUIRED)
 find_package(glog REQUIRED)
 find_package(Armadillo REQUIRED)
 find_package(BLAS REQUIRED)
@@ -16,16 +16,14 @@ if(!WIN32)
 endif()
 set(link_math_lib  ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
 
-add_executable(test_kuiper ../test/test_main.cpp ${DIR_TEST_DATA} ${DIR_TEST_LAYER} ${DIR_TEST_NET} ${DIR_TEST_RUNTIME})
-if(MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O0 /openmp:llvm")
-else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fopenmp -march=native")
-endif()
+add_executable(test_kuiper test_main.cpp ${DIR_TEST_DATA} ${DIR_TEST_LAYER} ${DIR_TEST_NET} ${DIR_TEST_RUNTIME})
+#if(MSVC)
+#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O0 /openmp:llvm")
+#else()
+#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fopenmp -march=native")
+#endif()
 
 target_link_libraries(test_kuiper ${link_lib} ${link_math_lib})
-target_link_libraries(test_kuiper OpenMP::OpenMP_CXX)
-
 target_link_directories(test_kuiper PUBLIC ${PROJECT_SOURCE_DIR}/lib)
 target_link_libraries(test_kuiper kuiper)
 
