--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,11 +17,11 @@ endif()
 set(link_math_lib  ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
 
 add_executable(test_kuiper test_main.cpp ${DIR_TEST_DATA} ${DIR_TEST_LAYER} ${DIR_TEST_NET} ${DIR_TEST_RUNTIME})
-#if(MSVC)
-#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O0 /openmp:llvm")
-#else()
-#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fopenmp -march=native")
-#endif()
+if(MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /O0 /openmp:llvm")
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -fopenmp -march=native")
+endif()
 
 target_link_libraries(test_kuiper ${link_lib} ${link_math_lib})
 target_link_directories(test_kuiper PUBLIC ${PROJECT_SOURCE_DIR}/lib)
