--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,31 +10,31 @@ if (MSVC)
         # check if SSE2 is available
         include(CheckCXXCompilerFlag)
         check_cxx_compiler_flag("/arch:SSE2" HAS_SSE2)
-    else()
+    else ()
         set(HAS_SSE2 ON)
-    endif()
+    endif ()
     if (HAS_SSE2)
         # set __SSE2__ and __XOP__ macros
         add_definitions(-D__SSE2__ -D__XOP__)
-    endif()
-endif()
-option(USE_CUDA "Support Cuda Backend")
-option(BUILD_DEMO "Build The Demo Project" )
+    endif ()
+endif ()
+#option(USE_CUDA "Support Cuda Backend")
+option(BUILD_DEMO "Build THE DEMO PROJECT")
 
-if (!MSVC)
-    set(USE_CUDA ON)
-endif()
+#if (!MSVC)
+#    set(USE_CUDA ON)
+#endif ()
 set(BUILD_DEMO ON)
 
 if (BUILD_DEMO)
-    MESSAGE(STATUS "Build Demo Project")
+    MESSAGE(STATUS "Build DEMO PROJECT")
     add_subdirectory(demos)
 endif ()
 
-if (USE_CUDA)
-    MESSAGE(STATUS "Support Cuda Backend")
-    add_definitions(-DUSE_CUDA)
-endif ()
+#if (USE_CUDA)
+#    MESSAGE(STATUS "Support Cuda Backend")
+#    add_definitions(-DUSE_CUDA)
+#endif ()
 
 find_package(benchmark REQUIRED)
 find_package(OpenMP REQUIRED)
@@ -53,7 +53,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 set(link_lib glog::glog)
 IF (!WIN32)
     set(link_lib ${link_lib} pthread)
-ENDIF()
+ENDIF ()
 
 set(link_math_lib ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
 
@@ -68,6 +68,11 @@ target_include_directories(kuiper PUBLIC ${Armadillo_INCLUDE_DIR})
 # mathfun library defines
 add_compile_definitions(SSE_MATHFUN_WITH_CODE USE_SSE_AUTO)
 
-enable_testing()
-add_subdirectory(bench)
-add_subdirectory(test)
+# 本项目的开发者请使用set(DEVELOPMENT ON)或者在cmake中添加-DDEVELOPMENT=ON将选项打开
+option(DEVELOPMENT ON)
+if (${DEVELOPMENT})
+    message(STATUS "DEVELOPMENT MODE ON")
+    enable_testing()
+    add_subdirectory(bench)
+    add_subdirectory(test)
+endif ()
