MSVC CI中的测试路径修改成变量格式

--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -64,5 +64,5 @@ jobs:
 
       - name: Test
         working-directory: ${{github.workspace}}
-        run: ${{github.workspace}}/build/test/Release/test_kuiper.exe
+        run: ${{github.workspace}}/build/test/${{ env.BUILD_TYPE }}/test_kuiper.exe
 
