change the tensor and add gpu operater

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,31 @@
-cmake_minimum_required(VERSION 3.16)
-project(kuiper_infer)
-set(CMAKE_CXX_STANDARD 17)
-include_directories(./include)
+cmake_minimum_required(VERSION 3.21)
+set(CMAKE_CUDA_COMPILER /usr/local/cuda-12/bin/nvcc)
+
+project(kuiper_infer CXX CUDA)
+#set(CMAKE_CXX_STANDARD 17)
+
+
+set(BUILD_DEMO OFF)
+set(USE_GPU ON)
+
+#使用GPU
+add_definitions(-DGPU_ONLY)
+
+# add_definitions(-)
+
+#CUDA需要的头文件
+find_package(CUDA)
+include_directories(${CUDA_INCLUDE_DIRS})
+
+
+
+
+
+option(BUILD_DEMO "BUILD THE DEMO PROJECT")
+
+#option(USE_GPU "USE GPU" ON)
+
+
 if (MSVC)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
     # 假如编译x64，那么SSE2永远可用
@@ -20,45 +44,103 @@ if (MSVC)
     # Force LLVM OpenMP on MSVC
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp:llvm /openmp:experimental")
 endif ()
-option(BUILD_DEMO "BUILD THE DEMO PROJECT")
 
-set(BUILD_DEMO ON)
 
-if (BUILD_DEMO)
-    MESSAGE(STATUS "BUILD DEMO PROJECT")
-    add_subdirectory(demos)
+#if (BUILD_DEMO)
+#    MESSAGE(STATUS "BUILD DEMO PROJECT")
+#    add_subdirectory(demos)
+#endif ()
+
+# 定义变量来表示情况A是否成立
+set(IS_CASE_A TRUE)
+
+# 添加其他文件到库中
+set(SOURCES other.cpp)
+
+# 根据情况A添加对应的文件
+#if (IS_CASE_A)
+#    set(SOURCES ${SOURCES} a_gpu.cpp)
+#else ()
+#    set(SOURCES ${SOURCES} a.cpp)
+#endif ()
+#
+## 创建库并添加源文件
+#add_library(my_library ${SOURCES})
+
+
+
+# find_package(benchmark REQUIRED)
+# find_package(OpenMP REQUIRED)
+# find_package(Armadillo REQUIRED)
+ find_package(glog REQUIRED)
+# find_package(BLAS REQUIRED)
+# find_package(LAPACK REQUIRED)
+
+include_directories(./include)
+
+if (USE_GPU)
+
+
+
+    MESSAGE(STATUS "BUILD  PROJECT  WITH GPU")
+    # aux_source_directory(./source/data DIR_DATA)
+    aux_source_directory(./source/runtime DIR_PARSER)
+    aux_source_directory(./source/layer/abstract DIR_ABSTRACT_LAYER)
+
+#    aux_source_directory(./source/layer/details DIR_BINOCULAR_LAYER)
+
+    file(GLOB LAYER_DETAILS "./source/layer/details/*.hpp" "./source/layer/details/*.cu")
+    # add_library(DIR_BINOCULAR_LAYER ${LAYER_DETAILS_SOURCES})
+   
+
+    file(GLOB DIR_DATA "./source/data/tensor.cpp" "./source/data/tensor_utils.cu")
+    # add_library(DIR_DATA ${DIR_DATA_SOURCES})
+
+    aux_source_directory(./source/parser DIR_PARSER)
+    aux_source_directory(./source/utils DIR_UTILS)
+
+
+    add_library(kuiper SHARED ${DIR_DATA} ${DIR_PARSER} ${DIR_UTILS} ${DIR_ABSTRACT_LAYER} ${DIR_LAYER_DETAILS} ${DIR_PARSER})
+
+#    add_library(kuiper SHARED ${DIR_DATA})
+#    target_link_libraries(kuiper ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX)
+    target_include_directories(kuiper PUBLIC ${glog_INCLUDE_DIR})
+
+
+else ()
+    aux_source_directory(./source/data DIR_DATA)
+    aux_source_directory(./source/runtime DIR_PARSER)
+    aux_source_directory(./source/layer/abstract DIR_ABSTRACT_LAYER)
+    aux_source_directory(./source/layer/details DIR_BINOCULAR_LAYER)
+    aux_source_directory(./source/parser DIR_PARSER)
+    aux_source_directory(./source/utils DIR_UTILS)
+
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
+    set(link_lib glog::glog)
+    IF (!WIN32)
+        set(link_lib ${link_lib} pthread)
+    ENDIF ()
+
+    set(link_math_lib ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
+
+    add_library(kuiper SHARED ${DIR_DATA} ${DIR_PARSER} ${DIR_UTILS} ${DIR_ABSTRACT_LAYER} ${DIR_BINOCULAR_LAYER} ${DIR_PARSER})
+    target_link_libraries(kuiper ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX)
+
+    target_include_directories(kuiper PUBLIC ${benchmark_INCLUDE_DIRS})
+    target_include_directories(kuiper PUBLIC ${glog_INCLUDE_DIR})
+    target_include_directories(kuiper PUBLIC ${GTest_INCLUDE_DIR})
+    target_include_directories(kuiper PUBLIC ${Armadillo_INCLUDE_DIR})
 endif ()
 
-find_package(benchmark REQUIRED)
-find_package(OpenMP REQUIRED)
-find_package(Armadillo REQUIRED)
-find_package(glog REQUIRED)
-find_package(BLAS REQUIRED)
-find_package(LAPACK REQUIRED)
 
-aux_source_directory(./source/data DIR_DATA)
-aux_source_directory(./source/runtime DIR_PARSER)
-aux_source_directory(./source/layer/abstract DIR_ABSTRACT_LAYER)
-aux_source_directory(./source/layer/details DIR_BINOCULAR_LAYER)
-aux_source_directory(./source/parser DIR_PARSER)
-aux_source_directory(./source/utils DIR_UTILS)
+# find_package(benchmark REQUIRED)
+# find_package(OpenMP REQUIRED)
+# find_package(Armadillo REQUIRED)
+# find_package(glog REQUIRED)
+# find_package(BLAS REQUIRED)
+# find_package(LAPACK REQUIRED)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
-set(link_lib glog::glog)
-IF (!WIN32)
-    set(link_lib ${link_lib} pthread)
-ENDIF ()
-
-set(link_math_lib ${ARMADILLO_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
-
-add_library(kuiper SHARED ${DIR_DATA} ${DIR_PARSER} ${DIR_UTILS} ${DIR_ABSTRACT_LAYER} ${DIR_BINOCULAR_LAYER} ${DIR_PARSER} source/layer/details/platform.hpp)
-target_link_libraries(kuiper ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX)
-
-target_include_directories(kuiper PUBLIC ${benchmark_INCLUDE_DIRS})
-target_include_directories(kuiper PUBLIC ${glog_INCLUDE_DIR})
-target_include_directories(kuiper PUBLIC ${GTest_INCLUDE_DIR})
-target_include_directories(kuiper PUBLIC ${Armadillo_INCLUDE_DIR})
 
 # mathfun library defines
 add_compile_definitions(SSE_MATHFUN_WITH_CODE USE_SSE_AUTO)
