--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -47,7 +47,7 @@ jobs:
         id: runvcpkg
         with:
           vcpkgDirectory: C:/vcpkg
-          doNotUpdateVcpkg: true
+          doNotUpdateVcpkg: false
           runVcpkgInstall: true
 
       - name: Configure CMake
