修改github actions - windows

--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -47,8 +47,7 @@ jobs:
         id: runvcpkg
         with:
           vcpkgDirectory: C:/vcpkg
-          doNotUpdateVcpkg: false
-          vcpkgGitCommitId: '792078465c6024823cd827f2fd52560bd642028c'
+          doNotUpdateVcpkg: true
           runVcpkgInstall: true
 
       - name: Configure CMake
