--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,5 @@
 include(FetchContent)
+
 FetchContent_Declare(
   googletest
   URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
@@ -15,18 +16,45 @@ find_package(glog REQUIRED)
 enable_testing()
 
 add_executable(
-  hello_test
+  tensor_test
   ./test_data/test_tensor.cpp
 )
 target_link_libraries(
-  hello_test
+  tensor_test
   GTest::gtest_main
   kuiper
   glog::glog 
 )
 
+
+
+add_executable(
+  layer_test
+  ./test_layer/test_layer.cpp
+)
+target_link_libraries(
+  layer_test
+  GTest::gtest_main
+  kuiper
+  glog::glog 
+)
+
+add_executable(
+  maxpooling_test
+  ./test_layer/test_maxpooling.cpp
+)
+
+target_link_libraries(
+  maxpooling_test
+  GTest::gtest_main
+  kuiper
+  glog::glog 
+)
+
+
+
+
 include(GoogleTest)
-gtest_discover_tests(hello_test)
 
 # add_test(multiply_gtests multiply_test)
 
